--- a/index.html
+++ b/index.html
@@ -176,20 +176,20 @@
 
                             <ul class="token__info-list">
                                 <li class="token__info-list-item">
-                                    <p class="token__info-list-name">RAM</p>
-                                    <p class="token__info-list-value">15,000,000</p>
+                                    <p class="token__info-list-name">MEMORY</p>
+                                    <p id="memo"class="token__info-list-value">0/0</p>
                                 </li>
                                 <li class="token__info-list-item">
-                                    <p class="token__info-list-name">DATABASE</p>
-                                    <p class="token__info-list-value">$0.24</p>
+                                    <p class="token__info-list-name">HOST</p>
+                                    <p id="hostt"class="token__info-list-value">-</p>
                                 </li>
                                 <li class="token__info-list-item">
                                     <p class="token__info-list-name">CPU</p>
-                                    <p class="token__info-list-value">27.3%</p>
+                                    <p id="cpus"class="token__info-list-value">-</p>
                                 </li>
                                 <li class="token__info-list-item">
-                                    <p class="token__info-list-name">SPEED</p>
-                                    <p class="token__info-list-value">27.3%</p>
+                                    <p class="token__info-list-name">PLATFORM</p>
+                                    <p id="platform"class="token__info-list-value">DEBIAN</p>
                                 </li>
                             </ul>
                         </div>
@@ -342,7 +342,47 @@ function sett()
 	setTimeout(myFunction(),5000)
 }
 
+
+async function statistiy() {
+    try {
+        const response = await fetch('https://nsfwjs.lingm.repl.co/status', {
+            method: 'GET',
+            headers: {
+                "Access-Control-Allow-Origin": "*",
+                accept: 'application/json'
+            },
+        });
+
+        if (!response.ok) {
+            throw new Error(`Error! status: ${response.status}`);
+        }
+
+        const result = await response.json();
+        
+        $("#memo").html(result.memory)
+        $("#hostt").html(result.host)
+        $("#cpus").html(result.cpu)
+        $("#platform").html(result.platform)
+
+        
+        return console.log(result)
+
+
+    } catch (err) {
+        console.error(err);
+    }
+
+
+}
+
+statistiy()
+
+
+
 </script>
 </body>
 
 </html>
+
+
+
